[gd_scene load_steps=129 format=2]

[ext_resource path="res://Sprites/SingleLinePoweredDoorSprSheet.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SingleLineUnpoweredDoorSprSheet.png" type="Texture" id=2]
[ext_resource path="res://Scripts/IllusoryPoweredDoor.gd" type="Script" id=3]
[ext_resource path="res://Sprites/StandardWall.png" type="Texture" id=4]
[ext_resource path="res://Music & SFX/Door.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 160, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 224, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 32, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 160, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 224, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 96, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 160, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 192, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 224, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 32, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 64, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 96, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 128, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 160, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 192, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 224, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 256, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 32, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 64, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 96, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 128, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 160, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 192, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 224, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 256, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 0, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 32, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 64, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 96, 448, 32, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 224, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 2 )
region = Rect2( 160, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 224, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 32, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 64, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 160, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 224, 192, 32, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 32, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 64, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 2 )
region = Rect2( 96, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 2 )
region = Rect2( 160, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 2 )
region = Rect2( 224, 256, 32, 64 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 2 )
region = Rect2( 0, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 2 )
region = Rect2( 32, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 2 )
region = Rect2( 64, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 2 )
region = Rect2( 96, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 2 )
region = Rect2( 128, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 2 )
region = Rect2( 160, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 2 )
region = Rect2( 192, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 2 )
region = Rect2( 224, 320, 32, 64 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 32, 64 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 2 )
region = Rect2( 32, 384, 32, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": false,
"name": "activated",
"speed": 25.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": false,
"name": "deactivated",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=120]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=121]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=122]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=123]
extents = Vector2( 16, 8 )

[node name="IllusoryPoweredDoor" type="Area2D" groups=["Toggle"]]
z_index = 1
script = ExtResource( 3 )
hasWall = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
speed_scale = 4.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 120 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 24 )
shape = SubResource( 121 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="FadeArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="FadeArea"]
shape = SubResource( 122 )

[node name="WallSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )

[node name="WallCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCollision"]
position = Vector2( 0, 24 )
shape = SubResource( 123 )

[node name="DoorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="FadeArea" to="." method="_on_FadeArea_area_entered"]
[connection signal="area_exited" from="FadeArea" to="." method="_on_FadeArea_area_exited"]
[connection signal="body_entered" from="FadeArea" to="." method="_on_FadeArea_body_entered"]
[connection signal="body_exited" from="FadeArea" to="." method="_on_FadeArea_body_exited"]
